--- a/07.Espectros.tex
+++ b/07.Espectros.tex
@@ -9,15 +9,6 @@
 		
 		Al calcular con permutaciones se trabajará módulo $n$. La retrogradación sigue siendo R($\sigma(m))=\sigma(-1-m)$. La inversión será I($\sigma(m))=-\sigma(m)$, omitiendo la transposición habitual, ya que se toman las series transpuestas como equivalentes. De esta forma $-\sigma(m)+2\sigma(0)\equiv-\sigma(m)$. La retrogradación invertida es, por tanto, la composición de ambas: RI($\sigma(m))=\text{I}\circ\text{R}(\sigma(m))=\text{I}\left(\text{R}(\sigma(m))\right)=-\sigma(-1-m)$.			
 		
-		\begin{wrapfigure}{R}{0.25\textwidth}
-			\captionsetup{justification=centering, font=footnotesize}
-			\vspace*{-\bigskipamount}
-			\centering{
-				\includegraphics[width=0.22\textwidth]{Felix_Klein.jpeg}			
-				\caption*{Felix Klein\\(1849--1925)}	}
-			
-			\vspace*{-\bigskipamount}
-		\end{wrapfigure}		
 		La retrogradación, la inversión y la composición de ambas cumplen que al aplicarlas dos veces se vuelve a la serie original. En teoría de grupos se dice que tienen \textit{orden 2}. Entonces \{Id, I, R, IR\} forma un grupo especial llamado \textit{grupo de Klein}, donde RI $\equiv$ IR, ya que estamos tomando las series transpuestas como equivalentes. 
 		
 		En general, un grupo de Klein es el formado por cuatro elementos donde cada elemento es inverso de sí mismo. El grupo de Klein, llamado así en honor al matemático alemán Felix Klein, es el grupo $\mathbb{Z}/(2)\times\mathbb{Z}/(2)$, producto directo de dos grupos cíclicos de orden 2.
@@ -184,7 +175,7 @@
 		\subsection*{Suma completa}
 		
 		En resumen, estos a continuación son los numeradores $\sum%_{\Psi\in\text{D}_{n}\times\text{D}_{n}}
-		\text{Fij}(\Psi)$. El resultado final del número de diagramas posibles, o espectros seriales distintos, es dicho numerador entre $4n^2$, el tamaño del grupo. \footnote{Este apartado es una explicación detallada del artículo \cite{polygons}. La secuencia de números dada por las fórmulas demostradas se encuentra en la OEIS: \textit{https://oeis.org/A000940}}		
+		\text{Fij}(\Psi)$. El resultado final del número de diagramas posibles, o espectros seriales distintos, es dicho numerador entre $4n^2$, el tamaño del grupo. \footnote{Este apartado es una explicación detallada del artículo \cite{polygons}. La secuencia de números dada por las fórmulas demostradas se encuentra en la OEIS: \url{https://oeis.org/A000940}}		
 		\def\arraystretch{1.25}
 		\[\begin{array}{c||c}
 		&\textbf{\textit{n} IMPAR}\\\hline\hline
