--- a/Anexos.tex
+++ b/Anexos.tex
@@ -7,8 +7,9 @@
     
 \begin{appendices}
 	\input{Anexos/Matrices.tex}
-	\input{Anexos/Series.tex}%
-    \input{Anexos/Musette.tex}%
+	\input{Anexos/Latex.tex}
+%	\input{Anexos/Series.tex}%
+%    \input{Anexos/Musette.tex}%
     \input{Anexos/Comm.tex}
     \input{Anexos/Function.tex}
 \end{appendices}
