--- a/Anexos/Matrices.tex
+++ b/Anexos/Matrices.tex
@@ -6,7 +6,7 @@
 		frame=lines,
 		%
 		numberstyle=\ttfamily\tiny\color[gray]{0.3},
-		basicstyle=\small\sffamily,
+		basicstyle=\footnotesize\sffamily,
 		keywordstyle=\bfseries\rmfamily,
 %		identifierstyle=\color{magenta},
 %		commentstyle=\it\color{green!50!blue},
@@ -23,16 +23,3 @@
 
 	\newpage
 	\lstinputlisting{Anexos/matrix.cpp}
-	
-		\lstset{
-%		language=Tex,
-		%
-		basicstyle=\small\sffamily,
-		keywordstyle=\small\sffamily,
-		identifierstyle=\small\sffamily,
-		commentstyle=\small\sffamily,
-		stringstyle=\small\sffamily,
-	}
-	\newpage
-	\label{app:matrices2}
-	\lstinputlisting{Anexos/matrix.tex}
