--- a/ddphonism.sty
+++ b/ddphonism.sty
@@ -8,7 +8,7 @@
 % 
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
 \ProvidesPackage{ddphonism}
-[2019/04/05 v0.01 LaTeX package for dodecaphonism matrices, clock diagrams et al.]
+[2019/04/05 v0.1 LaTeX package for dodecaphonism matrices, clock diagrams et al.]
 
 \RequirePackage{ifthen}
 \RequirePackage{xparse}
@@ -16,8 +16,8 @@
 \RequirePackage{xstring}
 \RequirePackage{pgfkeys}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Matrices
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Matrices ¬\label{app:latex1}¬
 
 \usetikzlibrary{matrix}
 
@@ -66,8 +66,8 @@
 	}
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Diagrams
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Diagrams ¬\label{app:latex2}¬
 
 \usetikzlibrary{shapes,arrows,decorations.markings,shapes.misc}
 
@@ -109,8 +109,8 @@
 	\end{tikzpicture}
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Dihedral diagrams
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Dihedral diagrams ¬\label{app:latex3}¬
 
 \tikzstyle ddihedralArrow=[decoration=
 		{markings,mark=at position 1 with {\arrow[scale=1.5,>=angle 60]{>}}},
@@ -169,8 +169,8 @@
 	\ };
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Rows
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Rows ¬\label{app:latex4}¬
 
 %\eval{\thedsize-1}
 
