--- a/02.Dodecafonismo.tex
+++ b/02.Dodecafonismo.tex
@@ -139,16 +139,16 @@
 		&\text{RI}_{0}&\text{RI}_{1}&\text{RI}_{3}&\text{RI}_{9}&\text{RI}_{2}&\text{RI}_{11}&\text{RI}_{4}&\text{RI}_{10}&\text{RI}_{7}&\text{RI}_{8}&\text{RI}_{5}&\text{RI}_{6}&
 		\end{array}$}
 	
-		Por otro lado, he escrito otro programa en el propio lenguaje \LaTeX{} que crea esta misma tabla con el comando \verb|\dmatrix|, y tiene cualquier serie como argumento: \verb|\dmatrix{4,5,7,1,6,3,8,2,11,0,9,10}|. El código se encuentra también en el Anexo \ref{app:matrices}, página \pageref{app:matrices2}. La tabla aparece sin el orlado de nomenclaturas:
+		Por otro lado, he escrito otro programa en el propio lenguaje \LaTeX{} que crea esta misma tabla con el comando \verb|\dmatrix|, y tiene cualquier serie como argumento: \verb|\dmatrix{4,5,7,1,6,3,8,2,11,0,9,10}|. El código se encuentra en el Anexo \ref{app:latex}, página \pageref{app:latex1}. La tabla aparece sin el orlado de nomenclaturas:
 		\dmatrix{4,5,7,1,6,3,8,2,11,0,9,10}
 	
 		
 		\bigbreak
 		
-		También he creado una página interactiva que genera matrices de cualquier serie para cualquier longitud serial, además de generar series aleatorias. Permite escoger entre dos numeraciones y dos nomenclaturas. Está escrita en Elm y el código puede encontrarse en \textit{https://gitlab.com/dodecafonismo/matrices}.
+		También he creado una página interactiva que genera matrices de cualquier serie para cualquier longitud serial, además de generar series aleatorias. Permite escoger entre dos numeraciones y dos nomenclaturas. Está escrita en Elm y el código puede encontrarse en \url{https://gitlab.com/dodecafonismo/matrices}.
 		
 		\begin{wrapfigure}{l}{0.2\textwidth}
 			\vspace{-\bigskipamount}
 			\qrcode{https://matrices.netlify.com/}
-		\end{wrapfigure} En el código QR está el enlace de la aplicación web. Sus instrucciones de uso se encuentran al final de la página. El enlace es \textit{https://matrices.netlify.com/}.
+		\end{wrapfigure} En el código QR está el enlace de la aplicación web. Sus instrucciones de uso se encuentran al final de la página. El enlace es \url{https://matrices.netlify.com/}.
 		
