--- a/04.Grupo.tex
+++ b/04.Grupo.tex
@@ -98,11 +98,11 @@
 		%\vspace*{-3\bigskipamount}
 	\end{wrapfigure} 
 
-		He creado una página interactiva que genera diagramas de reloj de cualquier serie para cualquier longitud serial, además de generar series aleatorias. También se pueden aplicar las transformaciones a la serie, tanto las originales como las del nuevo sistema, para ver cómo se comporta el diagrama. Está escrita en Elm y el código puede encontrarse en \textit{https://gitlab.com/dodecafonismo/diagramas}.
+		He creado una página interactiva que genera diagramas de reloj de cualquier serie para cualquier longitud serial, además de generar series aleatorias. También se pueden aplicar las transformaciones a la serie, tanto las originales como las del nuevo sistema, para ver cómo se comporta el diagrama. Está escrita en Elm y el código puede encontrarse en \url{https://gitlab.com/dodecafonismo/diagramas}.
 	
-		En el código QR está el enlace de la aplicación web. Sus instrucciones de uso se encuentran al final de la página. El enlace es \linebreak\textit{https://diagramas.netlify.com/}.
+		En el código QR está el enlace de la aplicación web. Sus instrucciones de uso se encuentran al final de la página. El enlace es \url{https://diagramas.netlify.com}.
 		
-		Además, he creado un comando en \LaTeX{} que dibuja estos diagramas dada su serie y su nombre, así como el número que está arriba:\linebreak \verb|\ddiagram[4]{4,5,7,1,6,3,8,2,11,0,9,10}{T$^0$}| -- en este caso \verb|[4]| no es necesario, ya que por defecto se coloca arriba la primera nota de la serie.
+		Además, he creado un comando en \LaTeX{} que dibuja estos diagramas dada su serie y su nombre, así como el número que está arriba:\linebreak \verb|\ddiagram[4]{4,5,7,1,6,3,8,2,11,0,9,10}{T$^0$}| -- en este caso \verb|[4]| no es necesario, ya que por defecto se coloca arriba la primera nota de la serie. El código se encuentra en el Anexo \ref{app:latex}, página \pageref{app:latex2}.
 	
 	\section[El grupo: D$_{12}$ x D$_{12}$]{El grupo: D$_{\textbf{12}}$ x D$_{\textbf{12}}$}
 		\label{grupoD}
@@ -171,18 +171,19 @@
 	\end{changemargin}
 	
 	\pagebreak
-	He creado un comando en \LaTeX{} que dibuja estos diagramas diédricos dada su serie original y las funciones aplicadas a ella: \verb|t|, \verb|s|, \verb|c| y \verb|v|. Se aplican en ese mismo orden, y por defecto están a 0. \linebreak \verb|\ddihedral[c=2,t=3,s=1]{4,5,7,1,6,3,8,2,11,0,9,10}|.
+	He creado un comando en \LaTeX{} que dibuja estos diagramas diédricos dada su serie original y las funciones aplicadas a ella: \verb|t|, \verb|s|, \verb|c| y \verb|v|. Se aplican en ese mismo orden, y por defecto están a 0. \linebreak \verb|\ddihedral[c=2,t=3,s=1]{4,5,7,1,6,3,8,2,11,0,9,10}|. El código se encuentra en el Anexo \ref{app:latex}, página \pageref{app:latex3}.
 	
 	\section{Conmutatividad entre los elementos del grupo}
 	\label{conmut}
 		% comprobar cosos que conmutan, mencionar cosos que conmutan en el otro sistema
 		
-		La rotación (r) y la reflexión (s) de un grupo diédrico no conmutan, sino que cumplen $r\cdot s=s\cdot r^{-1}$. Por otro lado, en los productos directos los elementos de un lado conmutan con los del otro. Así, \{S, T\} no conmutan y \{V, C\} tampoco, pero el resto de parejas deben conmutar. La verificación de estas afirmaciones, que confirman que el grupo formado es D$_{12}\times\text{D}_{12}$, se encuentran en el Anexo \ref{app:commm}.
+		La rotación (r) y la reflexión (s) de un grupo diédrico no conmutan, sino que cumplen $r\cdot s=s\cdot r^{-1}$. Por otro lado, en los productos directos los elementos de un lado conmutan con los del otro. Así, \{S, T\} y \{V, C\} no conmutan, pero el resto de parejas sí. La verificación de estas afirmaciones, que confirman que el grupo generado es D$_{12}\times\text{D}_{12}$, se encuentran en el Anexo \ref{app:commm}.
 		
-		Volviendo a las definiciones originales \{I, T, R, C\}, su estructura interna es bien distinta. El problema de I es que depende de la permutación escogida, por lo que a veces tiene unas propiedades y a veces otras. En cambio, la definición de V con respecto a R es meramente estética. Ya que no depende de la permutación, su conmutatividad se mantiene invariante. 
+		Volviendo a las definiciones originales \{I, T, R, C\}, su estructura interna es bien distinta. El problema de I es que depende de la permutación escogida, por lo que a veces tiene unas propiedades y a veces otras. En cambio, la definición de V con respecto a R es meramente estética: ya que no depende de la permutación, su conmutatividad se mantiene invariante. 
 		
-		Viendo cómo conmutan los elementos de este sistema se aprecia la dificultad de I. Curiosamente, la conmutatividad de \{I, R\} e \{I, C\} se pierden, pero se gana la de \{I, T\}. Así, T conmuta con todo en el sistema. Esto muestra una ventaja de la definición de I.
+		Viendo cómo conmutan los elementos de este sistema se aprecia la dificultad de I. Curiosamente, la conmutatividad de \{I, R\} e \{I, C\} se pierde, pero se gana la de \{I, T\}. Así, T conmuta con todo en el sistema. Esto muestra una ventaja de la definición de I.
 		
+		\newpage
 		 \underline{I y R ya no conmutan:}
 		 \vspace{-2\bigskipamount}
 		\begin{multicols}{2}
@@ -220,6 +221,7 @@
 		
 		\includegraphics[width=\textwidth]{5.png}\\
 		
+		\newpage
 		 \underline{I y C ya no conmutan:}
 		\vspace{-2\bigskipamount}
 		\begin{multicols}{2}
@@ -250,6 +252,7 @@
 		
 		Si se echan las cuentas con C$^\text{k}$ en vez de con C$^1$, pueden conmutar si $\sigma\left(\text{k}\right)-\sigma\left(0\right)=6$. Como $\sigma$ es una permutación, devuelve todos los valores de 0 a 11 y solamente una vez cada uno. Por tanto, también devuelve 6 + $\sigma(0)$, así que \textbf{siempre existe un único k para el que I y C$^\text{k}$ conmutan}. En el caso de la permutación de la Suite Op. 25, como $\sigma\left(0\right)=4$ hay que encontrar el k para el que $\sigma\left(\text{k}\right)=4+6=10$. En este caso, $\text{k}=11$, pero depende por completo de la permutación original.\\
 		
+		\newpage
 		 \underline{I y T ahora sí conmutan:}
 		 \vspace*{-2\bigskipamount}
 		\begin{multicols}{2}
