--- a/00.Permutaciones.tex
+++ b/00.Permutaciones.tex
@@ -1,5 +1,5 @@
 \addtocounter{chapter}{-1}%
-\chapter{INTRODUCCIÓN MATEMÁTICA}
+\chapter{INTRODUCCIÓN MATEMÁTICA}\label{ch:permutaciones}
 	\section{Conjuntos y grupos}
 		Un \emph{conjunto} es una colección de objetos bien definidos y distintos entre sí que se llaman \emph{elementos}. 
 	
@@ -57,7 +57,7 @@
 		La notación utilizada para representar una permutación $\sigma$ perteneciente a S$_n$ con la numeración desde 0 y con $\sigma(m)$ siendo el elemento asociado a $m$ mediante $\sigma$, es:
 		\[\sigma=\left(\begin{matrix}0&1&2&&n-3&n-2&n-1\\\sigma\left(0\right)&\sigma\left(1\right)&\sigma\left(2\right)&\cdots&\sigma\left(n-3\right)&\sigma\left(n-2\right)&\sigma\left(n-1\right)\\\end{matrix}\right)\]
 		
-	\section{Aritmética modular básica}
+	\section{Aritmética modular}
 		Fijado un $n\in\mathbb{N}$, se dice que $a$ y $b$ son \textit{congruentes} (o equivalentes) módulo $n$ si tienen el mismo resto al dividirlos entre $n$; es decir, que todos los números con el mismo resto se agrupan y se toman como equivalentes. Se expresa como $a\equiv b$ (mod. $n$).
 	
 		De esta forma se pueden operar entre sí los números del 0 al $n-1$, ya que se conservan las operaciones de los números enteros, y si un resultado es $\geq n$ se puede seguir dividiendo entre $n$ para que cumpla $0\leq r<n$.
