--- a/01.Historia.tex
+++ b/01.Historia.tex
@@ -1,4 +1,4 @@
-	\chapter[INTRODUCCIÓN HISTÓRICA DEL DODECAFONISMO]{INTRODUCCIÓN HISTÓRICA DEL DODECAFONISMO}
+\chapter[INTRODUCCIÓN HISTÓRICA DEL DODECAFONISMO]{INTRODUCCIÓN HISTÓRICA DEL DODECAFONISMO}\label{ch:historia}
 	\section{Richard Wagner y la emancipación de la disonancia}
 		\begin{wrapfigure}{r}{0.3\textwidth}
 			\captionsetup{justification=centering, font=footnotesize}
