--- a/03.Suite.tex
+++ b/03.Suite.tex
@@ -1,5 +1,4 @@
-\chapter{ANÁLISIS DE UNA OBRA DODECAFÓNICA: OP. 25}
-\label{suitechapter}
+\chapter{ANÁLISIS DE UNA OBRA DODECAFÓNICA: OP. 25}\label{ch:suite}
 	\section{Series de la Suite op. 25}
 		Lo primero que hará un compositor dodecafónico antes de empezar a componer será escoger su serie original. Su elección nunca es una simple cuestión de azar; al contrario, ya que las singularidades de la serie darán un carácter especial a toda la obra. Por ejemplo, el compositor puede escoger una serie con simetrías, y así tendrá series repetidas entre su espectro serial. También puede tener simetrías internas solo en un fragmento de tres o cuatro notas, y de este modo podrá el compositor oscilar entre varias series del espectro que se parezcan entre sí.\footnote{Para un estudio completo de las relaciones de similitud entre series se recomienda \emph{On the Similarity of Twelve-Tone Rows}, de Tuukka Ilomäki. \cite{ilomaki}}
 		
