--- a/04.Grupo.tex
+++ b/04.Grupo.tex
@@ -1,4 +1,4 @@
-\chapter{EL GRUPO DE LAS TRANSFORMACIONES}
+\chapter{EL GRUPO DE LAS TRANSFORMACIONES}\label{ch:grupo}
 	\section{Nuevas definiciones y nuevas transformaciones}
 		\label{ciclico} 
 		Las fórmulas de las transformaciones del apartado \ref{transPsi} quedaron de esta forma:
@@ -53,7 +53,7 @@
 			\vspace{-\bigskipamount}
 			\ddiagram{4,5,7,1,6,3,8,2,11,0,9,10}{T$^0$}
 			\vspace{-\bigskipamount}
-		\end{wrapfigure} Para visualizar mejor cómo actúan las distintas transformaciones, las series se pueden representar mediante \textit{diagramas de reloj}: una sucesión de aristas con una orientación establecida que conecta los vértices de un dodecágono en el orden de la serie. Ya que el desplazamiento cíclico actúa como si la serie fuese circular, hay añadida una arista desde la última nota a la primera. El comienzo de la serie y su orientación se marcan con una flecha.
+		\end{wrapfigure} Para visualizar mejor cómo actúan las distintas transformaciones, las series se pueden representar mediante \textit{diagramas de reloj}: una sucesión de aristas con una orientación establecida que conecta los vértices de un dodecágono en el orden de la serie \cite{hunter}. Ya que el desplazamiento cíclico actúa como si la serie fuese circular, hay añadida una arista desde la última nota a la primera. El comienzo de la serie y su orientación se marcan con una flecha.
 		
 		Arriba se incluye el diagrama de la serie original $\sigma$ de la Suite Op. 25. Se pueden distinguir las características de la serie, como las tres diagonales, que son los tres intervalos de tritono. A continuación se incluyen los diagramas de las transformaciones del apartado \ref{transPsi}: la transposición, la inversión y la retrogradación; así como el nuevo desplazamiento cíclico.
 		
