--- a/05.Serialismo.tex
+++ b/05.Serialismo.tex
@@ -1,4 +1,4 @@
-\chapter{EL SURGIMIENTO DEL SERIALISMO INTEGRAL}
+\chapter{EL SURGIMIENTO DEL SERIALISMO INTEGRAL}\label{ch:serialismo}
 	\section{Alban Berg y Anton Webern: la Segunda Escuela de Viena}
 	\label{berweb}
 	Además de Schoenberg, hubo dos compositores más que contribuyeron al desarrollo del dodecafonismo y que demostraron con sus diferentes estilos la versatilidad del sistema. Éstos fueron los discípulos de Schoenberg: Alban Berg y Anton Webern. 
@@ -73,9 +73,8 @@
     	
     \emph{Pero la causa esencial de su fracaso reside en el desconocimiento profundo de las FUNCIONES seriales propiamente dichas, las funciones engendradas por el principio mismo de la serie.} \cite{boulez}\end{quote}
     
-   Es decir, que para ampliar el concepto de serialismo se debía primeramente conocer el fundamento matemático de las series y sus funciones transformativas. Además de ser músico y compositor, Boulez había estudiado matemáticas, lo que le llevó a querer analizar matemáticamente el sistema compositivo y generalizarlo para series de longitudes arbitrarias. Para él, el serialismo no debía ser un mero recurso compositivo, sino la ley que rige todos los elementos de la obra. De hecho, más adelante en su ensayo declara:
+	Es decir, que para ampliar el concepto de serialismo se debía primeramente conocer el fundamento matemático de las series y sus funciones transformativas. Además de ser músico y compositor, Boulez había estudiado matemáticas, lo que le llevó a querer analizar matemáticamente el sistema compositivo y generalizarlo para series de longitudes arbitrarias. Para él, el serialismo no debía ser un mero recurso compositivo, sino la ley que rige todos los elementos de la obra. De hecho, más adelante en su ensayo declara:
     
     \begin{quote}[\ldots] \emph{desde el descubrimiento de la Escuela de Viena, todo compositor alejado de los experimentos seriales ha resultado inútil.}\end{quote}
 
-	Su obra \emph{Structures I} (1952), para dos pianos, fue compuesta siguiendo las técnicas de serialismo integral: tiene series de doce alturas, doce ataques, doce duraciones y
-doce tipos dinámicos, aunque más tarde reduciría algunas a diez.
+	Su obra \emph{Structures I} (1952), para dos pianos, fue compuesta siguiendo las técnicas de serialismo integral: tiene series de doce alturas, doce ataques, doce duraciones y doce tipos dinámicos, aunque más tarde reduciría algunas a diez.
