--- a/09.Escalas.tex
+++ b/09.Escalas.tex
@@ -1,5 +1,4 @@
-	\chapter{ESCALAS Y FUNCIONES DEL EXPERIMENTO}
-	
+\chapter{ESCALAS Y FUNCIONES DEL EXPERIMENTO}\label{ch:escalas}	
 	\section{Escalas interválicas, escalas y funciones}
 	
 		Una \textit{escala interválica} es una secuencia ordenada de números naturales -- una secuencia de intervalos entre notas -- tales que la suma de todos ellos da 12. Así solo se consideran válidas las escalas equivalentes octava a octava: todos los intervalos de la escala deben sumar el número de semitonos de una octava. Por ejemplo, la escala diatónica jónica (o escala mayor) tiene como secuencia (2, 2, 1, 2, 2, 2, 1).
