--- a/Anexos.tex
+++ b/Anexos.tex
@@ -2,14 +2,14 @@
 	\appendix
 	\addappheadtotoc
 	\appendixpage
-	\fancyhead{}
+%	\fancyhead{}
 	\pagestyle{plain}
     
 \begin{appendices}
 	\input{Anexos/Matrices.tex}
 	\input{Anexos/Latex.tex}
-%	\input{Anexos/Series.tex}%
-%    \input{Anexos/Musette.tex}%
+	\input{Anexos/Series.tex}%
+    \input{Anexos/Musette.tex}%
     \input{Anexos/Comm.tex}
-    \input{Anexos/Function.tex}
+%    \input{Anexos/Function.tex}
 \end{appendices}
