--- a/Bibliotecas.tex
+++ b/Bibliotecas.tex
@@ -91,10 +91,10 @@
 \graphicspath{{Fotos/}}
 
 % Headers
-\usepackage{fancyhdr}
-\fancyhead{}
-\fancyhead[LE,RO]{\MakeUppercase{\chaptername\ \thechapter}}
- \setlength{\headheight}{15.71667pt}
+%\usepackage{fancyhdr}
+%\fancyhead{}
+%\fancyhead[LE,RO]{\MakeUppercase{\chaptername\ \thechapter}}
+% \setlength{\headheight}{15.71667pt}
 
 % Apéndices
 \usepackage[titletoc]{appendix}
