--- a/Introduccion.tex
+++ b/Introduccion.tex
@@ -1,3 +1,4 @@
+\label{ch:introduccion}
 \pagestyle{plain}
 \thispagestyle{empty}
 
@@ -29,7 +30,7 @@
 		
 		Por ejemplo, las músicas serialistas se basan en la continua reiteración de secuencias de elementos musicales. Es decir, un compositor serialista tomará una secuencia ordenada de notas, dinámicas o timbres y la usará como único bloque constructivo de su obra. Puede, además, serializar más de un conjunto de elementos musicales, o incluso pretender serializar el máximo número de conjuntos. Estas músicas se pueden describir matemáticamente por medio de permutaciones y grupos.
 		
-		Son en estas estructuras en las que se centrará el presente texto, y más específicamente en el dodecafonismo, el primer sistema compositivo serialista. Se explicarán los fundamentos matemáticos que lo posibilitan y los postulados que lo definieron, extendiendo las definiciones habituales hacia el ámbito matemático. Además, se investigará sobre el valor artístico del serialismo mediante el uso de escalas no cromáticas en busca de consonancia.
+		Son en estas estructuras en las que se centrará el presente texto, y más específicamente en el dodecafonismo, el primer sistema compositivo serialista. Se explicarán los fundamentos matemáticos que lo posibilitan y los postulados que lo definieron, extendiendo las definiciones habituales hacia el ámbito matemático. %Además, se investigará sobre el valor artístico del serialismo mediante el uso de escalas no cromáticas en busca de consonancia.
         
         %Todas las estructuras musicales están basadas en estructuras matemáticas. A lo largo de la historia, los compositores han ido descubriendo e inventando estas propiedades musicales en las piezas que componı́an; las matemáticas son capaces de describir las propiedades de estos elementos musicales como para cualquier otro objeto matemático.
         
@@ -51,4 +52,4 @@
 	\newpage
 	
 	\pagenumbering{arabic}
-	\pagestyle{fancy}
+%	\pagestyle{fancy}
