--- a/main.tex
+++ b/main.tex
@@ -8,23 +8,23 @@
     \include{Portada}
     \include{Introduccion}
 	
-%	\include{00.Permutaciones}%
+	\include{00.Permutaciones}%
 	
     \part{DODECAFONISMO}
-%    \include{01.Historia}%
+    \include{01.Historia}%
     \include{02.Dodecafonismo}
-%	\include{03.Suite}%
+	\include{03.Suite}%
 	\include{04.Grupo}
     
-%	\part{ENEFONISMO}%
-%	\include{05.Serialismo}%
-%	\include{06.Acciones}%
+	\part{ENEFONISMO}%
+	\include{05.Serialismo}%
+	\include{06.Acciones}%
     \include{07.Espectros}
     
-    \part{MODIFICACIONES}
+%    \part{MODIFICACIONES}
 %	\include{08.Filosofia}%
-	\include{09.Escalas}
-	\include{10.Musescore}
+%	\include{09.Escalas}
+%	\include{10.Musescore}
     
     \include{Anexos}
     
