--- a/08.Filosofia.tex
+++ b/08.Filosofia.tex
@@ -1,4 +1,5 @@
-	\chapter{EL SERIALISMO EN LA FILOSOFÍA DEL ARTE} % TODO
+\chapter{EL SERIALISMO EN LA FILOSOFÍA DEL ARTE}\label{ch:filosofia}
+	 % TODO
         % 08.Recorrido filosófico histórico, filosofía del arte (quotes), motivos míos (filosofía actual)
     \section{Recorrido filosófico del serialismo}
     Schoenberg thought 'classical' tonality (aka. common-practise) was a social construct, every law was arbitrary, and that people enjoyed that kind of music because the system had internal consistency. Therefore, he created a new system (12-tone) that in his opinion had the same logic. He believed that in 100 years lay people would be singing his tunes!!
