--- a/10.Musescore.tex
+++ b/10.Musescore.tex
@@ -1,6 +1,5 @@
 %	\chapter{RESULTADOS DE LAS MODIFICACIONES}
-	\chapter{MODIFICACIÓN DE PARTITURAS SERIALISTAS}
-	
+\chapter{MODIFICACIÓN DE PARTITURAS SERIALISTAS}\label{ch:musescore}
 	\section{Obras modificadas}
 	
 	Ahora se describirán las obras que pasarán por la modificación. Para abarcar distintos estilos compositivos y hacer este estudio más riguroso, se han escogido obras de los tres principales compositores dodecafónicos: Schoenberg, Berg y Webern.
@@ -50,7 +49,9 @@
     
     % 10.plugin de musescore, conclusiones
     \section{Página de modificaciones y plugin}
-   
+	
+	La primera vez que realicé este experimento tuve que modificar nota a nota, a mano, la partitura que había escogido. Por este motivo decidí crear estas herramientas, que evitan ese trabajo tedioso y mecánico, pero también sirven para otros propósitos. Por ejemplo, para cambiar una partitura de mayor a menor, o viceversa.
+	
     He creado una página interactiva que transforma cada nota de una partitura a la nota requerida. Está escrita en Elm y el código puede encontrarse en \url{https://gitlab.com/dodecafonismo/modificaciones}.
    
     \begin{wrapfigure}{l}{0.2\textwidth}
