--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -1,33 +1,13 @@
 	\begin{thebibliography}{00}
 		\addcontentsline{toc}{chapter}{Bibliografía}
 			
-%			\item Introducción:
-			
 			\bibitem{wright}
 			{\sc Wright, David.} 
 			\textit{Mathematics and Music},
 			American Mathematical Society 
-			(2009).
+			(2009).			
 			
-%			\item Dodecafonismo:
-
-			\bibitem{delgado}
-			{\sc Prof. Fernando Delgado García.} 
-			Clases y material de Historia de la Música, 5$^{\circ}$ y 6$^{\circ}$ de Enseñanzas Profesionales del Conservatorio Profesional de Música Arturo Soria, cursos 2014-15 y 2015-16.
-			
-			\bibitem{boulez}
-			{\sc Boulez, Pierre.}
-			\textit{Schoenberg is dead},
-			The Score
-			(1952).
-
-			\bibitem{dominguez}
-			{\sc Domínguez Romero, Manuel.} 
-			\textit{Las Matemáticas en el Serialismo Musical},
-			Sigma n.24 
-			(2004).
-			
-%			\item Historia:%
+			\subsubsection*{\autoref{ch:historia}}
 			
 			\bibitem{kinney}
 			{\sc Kinney, James P.} 
@@ -41,9 +21,40 @@
 			\textit{Estructura y significado en la música serial y aleatoria},
 			Universidad Nacional de Educación a Distancia.
 			Tesis Doctoral en Filosofía
-			(2005)
+			(2005)			
+			
+			\subsubsection*{\autoref{ch:dodecafonismo}}
+			
+			\bibitem{delgado}
+			{\sc Delgado García, Fernando.} 
+			Clases y material de Historia de la Música, 5$^{\circ}$ y 6$^{\circ}$ de Enseñanzas Profesionales del Conservatorio Profesional de Música Arturo Soria, cursos 2014-15 y 2015-16.
+			
+			\bibitem{boulez}
+			{\sc Boulez, Pierre.}
+			\textit{Schoenberg is dead},
+			The Score
+			(1952).
+			
+			\bibitem{dominguez}
+			{\sc Domínguez Romero, Manuel.} 
+			\textit{Las Matemáticas en el Serialismo Musical},
+			Sigma n.24 
+			(2004).
 
-%			\item Suite:%
+			\subsubsection*{\autoref{ch:suite}}
+			
+			\bibitem{ilomaki}
+			{\sc Ilom\"aki, Tuukka.}
+			\textit{On the Similarity of Twelve-Tone Rows},
+			Sibelius Academy
+			(2008).
+			
+			\bibitem{hyde}
+			{\sc Hyde, Martha.} Chapter 4: “Dodecaphonism: Schoenberg”,
+			\textit{Models of Musical Analysis: Early Twentieth-century Music},
+			Ed. Mark Everist and Jonathan Dunsby.
+			Oxford: Blackwell
+			(1993)
 					
 			\bibitem{xiao}
 			{\sc Xiao, June.} 
@@ -59,20 +70,15 @@
 			Prof. David Headlam
 			(2006)
 			
-			\bibitem{hyde}
-			{\sc Hyde, Martha.} Chapter 4: “Dodecaphonism: Schoenberg”,
-			\textit{Models of Musical Analysis: Early Twentieth-century Music},
-			Ed. Mark Everist and Jonathan Dunsby.
-			Oxford: Blackwell
-			(1993)
+			\subsubsection*{\autoref{ch:grupo}}			
 			
-			\bibitem{ilomaki}
-			{\sc Ilom\"aki, Tuukka.}
-			\textit{On the Similarity of Twelve-Tone Rows},
-			Sibelius Academy
-			(2008).
+			\bibitem{hunter}
+			{\sc Hunter, David J.; von Hippela, Paul T.}
+			\textit{How Rare Is Symmetry in Musical 12-Tone Rows?},
+			The American Mathematical Monthly, Vol. 110, No. 2
+			(2003).
 			
-%			\item Acciones:%
+			\subsubsection*{\autoref{ch:acciones}}
 			
 			\bibitem{armstrong}
 			{\sc Armstrong, M. A.} Chapter 6: “Permutations”, Chapter 17: “Actions, Orbits, and Stabilizers”, Chapter 18: “Counting Orbits”,
@@ -80,7 +86,7 @@
 			New York: Springer-Verlag
 			(1988)
 			
-%			\item Espectros:
+			\subsubsection*{\autoref{ch:espectros}}
 			
 			\bibitem{polygons}
 			{\sc Golomb, S. W., Welch, L. R.}
@@ -94,14 +100,14 @@
 			The American Mathematical Monthly, Vol. 92, No. 1
 			(1985).
 			
-%			\item Filosofía:%
-			
-			\bibitem{basomba}
-			{\sc Basomba García, Daniel.} 
-			\textit{El último Bach y el dodecafonismo como ideal musical: una lectura estética y sociológica},
-			Universidad Carlos III de Madrid.
-			Tesis Doctoral en Ciencia Política y Sociología
-			(2013)
+%			\subsubsection*{\autoref{ch:filosofia}}
+%			
+%			\bibitem{basomba}
+%			{\sc Basomba García, Daniel.} 
+%			\textit{El último Bach y el dodecafonismo como ideal musical: una lectura estética y sociológica},
+%			Universidad Carlos III de Madrid.
+%			Tesis Doctoral en Ciencia Política y Sociología
+%			(2013)
 			
 %			NADA
 %			\bibitem{bhalerao}
@@ -111,38 +117,22 @@
 %			Prof. Jim Morrow
 %			(2015)
 			
-%			NADA
 %			\bibitem{morris}
 %			{\sc Morris, Robert.}
 %			\textit{Mathematics and the Twelve-Tone System: Past, Present, and Future},
 %			Perspectives of New Music 45.2 
 %			(2007)
 			
-%			NADA
 %			\bibitem{cook}
 %			{\sc Cook, Nicholas.} Chapter 9: “Analyzing Serial Music”,
 %			\textit{A Guide to Musical Analysis},
 %			New York: G. Braziller
 %			(1987)
-			
-%			NADA
+
 %			\bibitem{roberts}
 %			{\sc Roberts, Gareth E.}
 %			\textit{Composing with Numbers: Arnold Schoenberg and His Twelve-Tone Method},
 %			Math/Music: Aesthetic Links
 %			(2012).
-			
-%			NADA
-%			\bibitem{hunter}
-%			{\sc Hunter, David J.; von Hippela, Paul T.}
-%			\textit{How Rare Is Symmetry in Musical 12-Tone Rows?},
-%			The American Mathematical Monthly, Vol. 110, No. 2
-%			(2003).
-			
-%			NADA
-%			\bibitem{rowdata}
-%			{\sc London, J., von Hippel, P., Huron, D., Cartano, J., Kingery, K., Olsen, B., Santelli, T.}
-%			\textit{Row forms in the serial works of Schoenberg, Berg, and Webern}
-%			[Computer database.] Stanford, CA: Center for Computer Assisted Research in the Humanities (www.ccarh.org/publications/data/humdrum/tonerow/) (2000/2001).
 						
 	\end{thebibliography}
