--- a/Anexos.tex
+++ b/Anexos.tex
@@ -1,15 +1,15 @@
    \cleardoublepage
-	\appendix
-	\addappheadtotoc
-	\appendixpage
+%	\appendix
+%	\addappheadtotoc
+%	\appendixpage
 %	\fancyhead{}
 	\pagestyle{plain}
-    
-\begin{appendices}
+    \apendices
+%\begin{appendices}
 	\input{Anexos/Matrices.tex}
 	\input{Anexos/Latex.tex}
 	\input{Anexos/Series.tex}%
     \input{Anexos/Musette.tex}%
     \input{Anexos/Comm.tex}
 %    \input{Anexos/Function.tex}
-\end{appendices}
+%\end{appendices}
