--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -1,5 +1,5 @@
 	\begin{thebibliography}{00}
-		\addcontentsline{toc}{chapter}{Bibliografía}
+		\addcontentsline{toc}{part}{BIBLIOGRAFÍA}
 			
 			\bibitem{wright}
 			{\sc Wright, David.} 
